Multiple fixes and enhancements...
1. Adding support for multi selection of themes.
2. Removed Lion scrollbars from reset.css
3. Adjusted Visual Studio theme to match Visual Studio colors a bit
better

--- a/reset.css
+++ b/reset.css
@@ -17,24 +17,3 @@
 {
 	z-index: 3;
 }
-
-/*
-* customize codemirror's scrollbars
-*/
-.CodeMirror ::-webkit-scrollbar {
-	height: 9px;
-	width: 9px;
-}
-
-.CodeMirror ::-webkit-scrollbar-track {
-	background-color: rgba(0,0,0,0.1);
-}
-
-.CodeMirror ::-webkit-scrollbar-thumb {
-	border-radius: 4px;
-	background-color: rgba(90,90,90,0.5);
-}
-
-.CodeMirror ::-webkit-scrollbar-thumb:hover {
-	background-color: rgba(10,10,10,0.5);
-}
