--- a/theme/visual-studio.css
+++ b/theme/visual-studio.css
@@ -32,17 +32,18 @@
 
 
 .cm-s-visual-studio.CodeMirror .cm-atom { color: blue; }
-.cm-s-visual-studio.CodeMirror .cm-qualifier { color: brown; }
+.cm-s-visual-studio.CodeMirror .cm-qualifier { color: #800000; }
 
 /*CodeMirror does not add notation for css...  Which would be really nice. */
 /*.cm-s-visual-studio.CodeMirror .cm-property { color: red; }*/
 
 .cm-s-visual-studio.CodeMirror .cm-keyword { color: blue; }
 .cm-s-visual-studio.CodeMirror .cm-comment { color: green; }
-.cm-s-visual-studio.CodeMirror .cm-string {color: brown;}
-.cm-s-visual-studio.CodeMirror .cm-string-2 {color: brown;}
+.cm-s-visual-studio.CodeMirror .cm-string {color: #800000;}
+.cm-s-visual-studio.CodeMirror .cm-string-2 {color: #800000;}
 .cm-s-visual-studio.CodeMirror .cm-variable { color: black; }
 .cm-s-visual-studio.CodeMirror .cm-variable-2 { color: black; }
-.cm-s-visual-studio.CodeMirror .cm-tag { color: brown; }
+.cm-s-visual-studio.CodeMirror .cm-tag { color: #800000; }
 .cm-s-visual-studio.CodeMirror .cm-attribute { color: red; }
+.cm-s-visual-studio.CodeMirror .cm-property { color: black; }
 
